--- a/templates/captionmenu.mustache
+++ b/templates/captionmenu.mustache
@@ -39,7 +39,7 @@
     <div id="caption-dropdown"
          class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black text-white"
          role="menu"
-         aria-labelledby="captionMenuButton-{{uniqid}}">
+         aria-labelledby="changecaption">
     </div>
 </div>
 
