--- a/templates/player/speedmenu.mustache
+++ b/templates/player/speedmenu.mustache
@@ -35,7 +35,7 @@
             aria-expanded="false"
             aria-controls="ratelist"
             title="{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}">
-        <i class="bi bi-speedometer2" aria-hidden="true"data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
+        <i class="bi bi-speedometer2" aria-hidden="true" data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
                    data{{bs}}-trigger="hover"
                    data{{bs}}-title="{{#str}}changeplaybackspeed,mod_interactivevideo{{/str}}"></i>
         <span class="visually-hidden">{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}</span>
@@ -51,7 +51,7 @@
         <button type="button" class="dropdown-item text-white changerate px-3" data-rate="0.75" role="menuitem">
             <i class="bi fa-fw" aria-hidden="true"></i><span>0.75</span>
         </button>
-        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="1" role="menuitem" aria-checked="true">
+        <button type="button" class="dropdown-item text-white changerate px-3" data-rate="1" role="menuitem">
             <i class="bi fa-fw bi-check" aria-hidden="true"></i><span>1</span>
         </button>
         <button type="button" class="dropdown-item text-white changerate px-3" data-rate="1.5" role="menuitem">
