Improve accessibility: remove aria-describedby referencing conditional description element

--- a/templates/activitycard.mustache
+++ b/templates/activitycard.mustache
@@ -28,8 +28,7 @@ Example context (json):
          data-instance="{{cm.instance}}"
          data-courseid="{{cm.course}}"
          role="region"
-         aria-labelledby="iv-title-{{cm.instance}}"
-         aria-describedby="iv-desc-{{cm.instance}}">
+         aria-labelledby="iv-title-{{cm.instance}}">
 
         {{^cardonly}}
             <div id="iv-title-{{cm.instance}}" class="visually-hidden">
