--- a/templates/backgroundloading.mustache
+++ b/templates/backgroundloading.mustache
@@ -38,6 +38,6 @@
              role="status"
              aria-hidden="true">
         </div>
-        <span class="visually-hidden">Loading, please wait...</span>
+        <span class="visually-hidden sr-only">Loading, please wait...</span>
     </div>
 </div>
