--- a/templates/captionmenu.mustache
+++ b/templates/captionmenu.mustache
@@ -34,7 +34,7 @@
             data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
             data{{bs}}-trigger="hover"
             data{{bs}}-title="{{#str}}subtitle,mod_interactivevideo{{/str}}"></i>
-        <span class="visually-hidden">{{#str}}subtitle, mod_interactivevideo{{/str}}</span>
+        <span class="visually-hidden sr-only">{{#str}}subtitle, mod_interactivevideo{{/str}}</span>
     </button>
     <div id="caption-dropdown"
          class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black text-white"
