--- a/templates/cardonly.mustache
+++ b/templates/cardonly.mustache
@@ -42,7 +42,7 @@
            role="button"
            aria-label="{{#str}}launchvideo,mod_interactivevideo{{/str}}">
             <i class="fa fa-play" aria-hidden="true"></i>
-            <span class="visually-hidden">{{#str}}launchvideo,mod_interactivevideo{{/str}}</span>
+            <span class="visually-hidden sr-only">{{#str}}launchvideo,mod_interactivevideo{{/str}}</span>
         </a>
         {{/cm.uservisible}}
 
