--- a/templates/player/endscreen.mustache
+++ b/templates/player/endscreen.mustache
@@ -55,7 +55,7 @@
                     aria-label="{{#str}}restart, mod_interactivevideo{{/str}}"
                     title="{{#str}}restart, mod_interactivevideo{{/str}}">
                 <i class="bi bi-arrow-repeat" aria-hidden="true"></i>
-                <span class="visually-hidden">{{#str}}restart, mod_interactivevideo{{/str}}</span>
+                <span class="visually-hidden sr-only">{{#str}}restart, mod_interactivevideo{{/str}}</span>
             </button>
         </header>
 
@@ -72,7 +72,7 @@
                     aria-label="{{#str}}restart, mod_interactivevideo{{/str}}"
                     title="{{#str}}restart, mod_interactivevideo{{/str}}">
                 <i class="bi bi-arrow-repeat" aria-hidden="true"></i>
-                <span class="visually-hidden">{{#str}}restart, mod_interactivevideo{{/str}}</span>
+                <span class="visually-hidden sr-only">{{#str}}restart, mod_interactivevideo{{/str}}</span>
             </button>
         </div>
         {{/hasendscreentext}}
