--- a/templates/player/messagetitle.mustache
+++ b/templates/player/messagetitle.mustache
@@ -40,6 +40,6 @@
             aria-label="{{#str}}close, mod_interactivevideo{{/str}}"
             title="{{#str}}close, mod_interactivevideo{{/str}}">
         <i class="bi bi-x-lg fs-25px" aria-hidden="true"></i>
-        <span class="visually-hidden">{{#str}}close, mod_interactivevideo{{/str}}</span>
+        <span class="visually-hidden sr-only">{{#str}}close, mod_interactivevideo{{/str}}</span>
     </button>
 </div>
