--- a/templates/player/player.mustache
+++ b/templates/player/player.mustache
@@ -60,7 +60,7 @@ Example context (json):
                             data{{bs}}-container="#wrapper"
                             data{{bs}}-trigger="hover">
                         <i class="bi bi-fullscreen" aria-hidden="true"></i>
-                        <span class="visually-hidden">{{#str}}togglefullscreen, mod_interactivevideo{{/str}}</span>
+                        <span class="visually-hidden sr-only">{{#str}}togglefullscreen, mod_interactivevideo{{/str}}</span>
                     </button>
                     {{/displayoptions.hidemainvideocontrols}}
 
