--- a/templates/player/qualitymenu.mustache
+++ b/templates/player/qualitymenu.mustache
@@ -41,7 +41,7 @@
                    data{{bs}}-trigger="hover"
                    data{{bs}}-title="{{#str}}videoquality,mod_interactivevideo{{/str}}"
            aria-hidden="true"></i>
-        <span class="visually-hidden">{{#str}}changevideoquality, mod_interactivevideo{{/str}}</span>
+        <span class="visually-hidden sr-only">{{#str}}changevideoquality, mod_interactivevideo{{/str}}</span>
     </button>
 
     <div id="qualitieslist"
