--- a/templates/player/speedmenu.mustache
+++ b/templates/player/speedmenu.mustache
@@ -38,7 +38,7 @@
         <i class="bi bi-speedometer2" aria-hidden="true" data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
                    data{{bs}}-trigger="hover"
                    data{{bs}}-title="{{#str}}changeplaybackspeed,mod_interactivevideo{{/str}}"></i>
-        <span class="visually-hidden">{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}</span>
+        <span class="visually-hidden sr-only">{{#str}}changeplaybackspeed, mod_interactivevideo{{/str}}</span>
     </button>
 
     <div id="ratelist"
