--- a/templates/card.mustache
+++ b/templates/card.mustache
@@ -30,7 +30,7 @@ Example context (json):
            role="button"
            aria-label="{{#str}}launchvideo,mod_interactivevideo{{/str}}">
             <i class="fa fa-play" aria-hidden="true"></i>
-            <span class="visually-hidden">{{#str}}launchvideo,mod_interactivevideo{{/str}}</span>
+            <span class="visually-hidden sr-only">{{#str}}launchvideo,mod_interactivevideo{{/str}}</span>
         </a>
         {{/cm.uservisible}}
 
@@ -113,7 +113,7 @@ Example context (json):
             {{^usecustomdesc}}
             <button class="description-toggle btn btn-link p-0 m-0" aria-expanded="false" aria-controls="description-{{cm.id}}">
                 <i class="fa fa-chevron-right description-show mx-2 mb-0"></i>
-                <span class="visually-hidden">Show description</span>
+                <span class="visually-hidden sr-only">Show description</span>
             </button>
             {{/usecustomdesc}}
             {{/formattedintro}}
