--- a/templates/player/startscreen.mustache
+++ b/templates/player/startscreen.mustache
@@ -44,7 +44,7 @@
                  role="status"
                  aria-live="polite"
                  aria-label="{{#str}}loading, core{{/str}}">
-                <span class="visually-hidden">{{#str}}loading, core{{/str}}</span>
+                <span class="visually-hidden sr-only">{{#str}}loading, core{{/str}}</span>
             </div>
 
             <button id="play"
@@ -52,7 +52,7 @@
                     type="button"
                     aria-label="{{#str}}playvideo, mod_interactivevideo{{/str}}">
                 <i class="bi bi-play-circle-fill text-danger" aria-hidden="true"></i>
-                <span class="visually-hidden">{{#str}}playvideo, mod_interactivevideo{{/str}}</span>
+                <span class="visually-hidden sr-only">{{#str}}playvideo, mod_interactivevideo{{/str}}</span>
             </button>
         </div>
 
@@ -92,7 +92,7 @@
              aria-live="polite"
              aria-label="{{#str}}loading, core{{/str}}"
              style="width: 3rem; height: 3rem; left: calc(50% - 1.5rem); top: calc(50% - 1.5rem);">
-            <span class="visually-hidden">{{#str}}loading, core{{/str}}</span>
+            <span class="visually-hidden sr-only">{{#str}}loading, core{{/str}}</span>
         </div>
 
         <button id="play"
@@ -100,7 +100,7 @@
                 type="button"
                 aria-label="{{#str}}playvideo, mod_interactivevideo{{/str}}">
             <i class="bi bi-play-circle-fill text-danger" aria-hidden="true"></i>
-            <span class="visually-hidden">{{#str}}playvideo, mod_interactivevideo{{/str}}</span>
+            <span class="visually-hidden sr-only">{{#str}}playvideo, mod_interactivevideo{{/str}}</span>
         </button>
     </div>
 </div>
