UI: improve description toggle (accessibility & RTL) and tidy player progress
- Use .description-toggle as the click target and toggle the inner .description-show rotation in JS.
- Update card.mustache markup: simplify button, add dir-rtl-hide/dir-ltr-hide icons and sr-only label for screen readers.
- Adjust styles:
  - target icon selector for description toggle and add RTL rotation rule.
  - remove hardcoded opacity from #lightprogress.
  - remove inline width on #lightprogressbar (allow CSS/JS to control width).
  - tweak badge sizing (width/height/padding/line-height).
- Update built assets (launch.min.js and launch.min.js.map) to reflect source changes.

--- a/templates/card.mustache
+++ b/templates/card.mustache
@@ -111,8 +111,9 @@ Example context (json):
             {{#showdescription}}
             {{#formattedintro}}
             {{^usecustomdesc}}
-            <button class="description-toggle btn btn-link p-0 m-0" aria-expanded="false" aria-controls="description-{{cm.id}}">
-                <i class="fa fa-chevron-right description-show mx-2 mb-0"></i>
+            <button class="description-toggle btn btn-link m-0" aria-expanded="false" aria-controls="description-{{cm.id}}">
+                <i class="dir-rtl-hide fa fa-chevron-right description-show mb-0"></i>
+                <i class="dir-ltr-hide fa fa-chevron-left description-show mb-0"></i>
                 <span class="visually-hidden sr-only">Show description</span>
             </button>
             {{/usecustomdesc}}
