--- a/templates/player/player.mustache
+++ b/templates/player/player.mustache
@@ -81,8 +81,7 @@ Example context (json):
                          aria-label="{{#str}}videoprogress, mod_interactivevideo{{/str}}"
                          aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
                         <div id="lightprogressbar"
-                             class="bg-danger position-absolute h-100"
-                             style="width: 0%;"></div>
+                             class="bg-danger position-absolute h-100"></div>
                     </div>
                     {{/displayoptions.hidemainvideocontrols}}
                 </div>
