--- a/styles.css
+++ b/styles.css
@@ -2225,7 +2225,6 @@ html:has(.path-mod-interactivevideo) {
 
 .path-mod-interactivevideo #lightprogress {
     height: 3px;
-    opacity: 0.5;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -3095,12 +3094,16 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     cursor: pointer;
 }
 
-.path-course-view .modtype_interactivevideo .description-container .fa-chevron-right {
+.path-course-view .modtype_interactivevideo .description-container .fa {
     transition: transform ease-in-out 300ms;
 }
 
-.path-course-view .modtype_interactivevideo .description-container .fa-chevron-right.rotate {
+.path-course-view .modtype_interactivevideo .description-container .fa.rotate {
     transform: rotate(90deg);
+}
+
+.path-course-view.dir-rtl .modtype_interactivevideo .description-container .fa.rotate {
+    transform: rotate(-90deg);
 }
 
 .path-course-view .modtype_interactivevideo .interactivevideo-card .progress {
@@ -4058,4 +4061,8 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     border-radius: 50%;
     background-color: var(--ivprimaryalt);
     font-size: small;
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    line-height: 25px;
 }
