--- a/templates/cardonly.mustache
+++ b/templates/cardonly.mustache
@@ -27,7 +27,7 @@
 {{#cardonly}}
 <div class="image-container card-only {{#hasanalytics}}hasanalytics{{/hasanalytics}}">
     <div class="poster position-relative {{#posterimagesquare}}square{{/posterimagesquare}}">
-        <img src="{{interactivevideo.posterimage}}" loading="lazy" alt="{{formattedname}}">
+        <img src="{{interactivevideo.posterimage}}" loading="lazy">
 
         {{#new}}
         <span class="badge iv-badge-primary new-badge" aria-label="{{#str}}new,interactivevideo{{/str}}">
