--- a/templates/player/qualitymenu.mustache
+++ b/templates/player/qualitymenu.mustache
@@ -28,21 +28,20 @@
      data-current=""
      role="group"
      aria-label="{{#str}}videoquality, mod_interactivevideo{{/str}}">
+    <div data{{bs}}-toggle="dropdown">
     <button type="button"
             class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1 {{^displayoptions.quality}}d-none{{/displayoptions.quality}}"
             id="qualityMenuButton"
-            data{{bs}}-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
             aria-controls="qualitieslist"
-            title="{{#str}}videoquality, mod_interactivevideo{{/str}}">
-        <i class="bi bi-gear"
-        data{{bs}}-toggle="tooltip" data-bs-container="#wrapper"
-                   data{{bs}}-trigger="hover"
-                   data{{bs}}-title="{{#str}}videoquality,mod_interactivevideo{{/str}}"
-           aria-hidden="true"></i>
+            title="{{#str}}videoquality, mod_interactivevideo{{/str}}"
+            data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
+            data{{bs}}-trigger="hover">
+        <i class="bi bi-gear" aria-hidden="true"></i>
         <span class="visually-hidden sr-only">{{#str}}changevideoquality, mod_interactivevideo{{/str}}</span>
     </button>
+    </div>
 
     <div id="qualitieslist"
          class="dropdown-menu dropdown-menu-{{#bs}}end{{/bs}}{{^bs}}right{{/bs}} bg-black text-white"
